fixing disclaimer screen z-index

--- a/src/splash-screens/disclaimer-screen.css
+++ b/src/splash-screens/disclaimer-screen.css
@@ -24,6 +24,15 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 10;
+}
+
+.navigation-controls-fade {
+  position: absolute !important;
+  left: 0;
+  right: 0;
+  bottom: 5%;
+  z-index: 5;
 }
 
 .disclaimer-title {
